# OpenWhistle

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  DESIGN.md  Dockerfile  OpenWhistle.csproj  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  cleanup-images.yml  docker-publish.yml  e2e.yml  pages.yml  perf.yml  trivy.yml
ansible/: .gitignore  deploy.yml  inventory.example  vault.yml.example
ansible/group_vars/: openwhistle.yml.example
ansible/roles/openwhistle/defaults/: main.yml
ansible/roles/openwhistle/handlers/: main.yml
ansible/roles/openwhistle/tasks/: certbot.yml  deploy.yml  docker.yml  main.yml  systemd.yml  user.yml
ansible/roles/openwhistle/templates/: docker-compose.yml.j2  env.j2  nginx.conf.j2  openwhistle.service.j2
app/: __init__.py  config.py  csrf.py  database.py  i18n.py  logging_config.py  main.py  middleware.py  redis_client.py  templating.py
app/api/: admin.py  auth.py  deps.py  reports.py  wizard.py
app/locales/: de.json  en.json  fr.json  pt-br.json
app/models/: __init__.py  attachment.py  audit.py  category.py  location.py  organisation.py  report.py  setup.py  user.py
app/schemas/: auth.py  report.py
app/services/: attachment.py  audit.py  auth.py  categories.py  crypto.py  demo_seed.py  encryption.py  integrity.py  ldap_auth.py  locations.py  mfa.py  notifications.py  oidc.py  pdf.py  pin.py  rate_limit.py  reminders.py  report.py  retention.py  storage.py  users.py  version_check.py
app/static/css/: fonts.css  site.css
app/static/js/: site.js
app/templates/: base.html  error.html  login.html  login_mfa.html  login_mfa_setup.html  status.html  submit.html  submit_success.html
app/templates/admin/: audit_log.html  categories.html  dashboard.html  locations.html  organisations.html  report.html  retention.html  stats.html  system.html  telephone_channel.html  users.html
app/templates/wizard/: setup.html
charts/openwhistle/: Chart.yaml  values.yaml
charts/openwhistle/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
docs/: CNAME  docs.html  hinschg_reference.md  index.html  performance-baseline.md  robots.txt  sitemap.xml
docs/blog/: hinschg-compliance-leitfaden.html  index.html  interne-meldestelle-einrichten.html  whistleblower-software-vergleich.html
docs/de/: index.html
docs/security/: dpa_template.md  security_policy.md
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_add_attachments.py  003_roles_status_assignment.py  004_audit_log.py  005_admin_notes.py  006_custom_categories.py  007_deletion_requests.py  008_case_links.py  009_locations_confidential.py  010_s3_attachment_storage.py  011_ldap_auth.py  012_multitenancy_and_encryption.py  013_populate_org_and_encrypt_reports.py  014_fix_multitenancy_unique_constraints.py  015_make_admin_org_id_nullable.py
nginx/: nginx.conf
scripts/: gen_favicon.py  generate_integrity_manifest.py  reset_admin_password.py
tests/: conftest.py  test_attachments.py  test_auth.py  test_bug_bounty_v111.py  test_coverage_admin.py  test_coverage_admin_extended.py  test_coverage_auth.py  test_coverage_auth_extended.py  test_coverage_gaps.py  test_coverage_misc.py  test_coverage_reports.py  test_csp_no_inline.py  test_csrf.py  test_dashboard_pagination.py  test_integrity.py  test_issue_45_s3_missing.py  test_issue_46.py  test_mfa_setup.py  test_middleware.py  test_notifications.py  test_oidc.py  test_openapi_contract.py  test_pdf_service.py  test_rate_limit.py  test_reports.py  test_security_advisories_v111.py  test_services.py  test_services_demo_seed.py  test_services_misc.py  test_services_report.py  test_session_expiry.py  test_ux_fixes.py  test_v030_api.py  test_v030_services.py  test_v040.py  test_v050.py  test_v100.py  test_version_check.py  test_wizard.py
tests/e2e/: conftest.py  test_accessibility.py  test_admin_login.py  test_admin_workflow.py  test_category_location.py  test_csp.py  test_four_eyes_deletion.py  test_language_switcher.py  test_pdf_download.py  test_session_expiry.py  test_setup_wizard.py  test_user_management.py  test_wb_status.py  test_wb_submission.py
tests/perf/: README.md  locustfile.py
website/: CNAME  index.html
website/css/: style.css
website/docs/: getting-started.html  index.html  legal.html  security.html
